Fixed menu bugs on mobile :raised_hands:

--- a/assets/sass/componentes/_navegacion.scss
+++ b/assets/sass/componentes/_navegacion.scss
@@ -1,85 +1,61 @@
 /*********************
 Main navbar
 **********************/
-// Navegacion principal
+// Toggle Menu Overlay
 .nav-main {
   position: relative;
-  @include transition(.4s);
-  flex: 1 100%;
-  label {
-    margin-bottom: 0;
+  @media screen and ( min-width: 900px ) {
+    display: none;
   }
-  label::after {
-    width: 2em;
-    position: fixed;
-    top: ( $paddingbase / 2 );
-    right: $paddingbase;
-    display: block;
-    @include font-size(22);
-    line-height: 2.1;
-    content: "☰";
-    z-index: 250;
+  ul {
+    position: fixed; right: 0; top: 0;
+    z-index: 50;
+    border-radius: 20px;
+    line-height: 1.7;
     text-align: center;
+    transition-property: transform;
+    transition-duration: .3s;
+    transform:
+      translate( 100%, 65px )
+      rotate( 0deg )
+      ;
+    padding: 20px;
     background-color: $color-alt;
-    border-radius: 8px;
-    color: $white;
-    @media screen and (min-width: 900px) {
-      display: none;
+    box-shadow: 2px 2px 0 $black-alpha-medio;
+    li {
+      display: block;
+    }
+    a {
+      padding: 5px;
+      font-size: 150%;
+      &:hover {
+        color: $color-base;
+        //text-shadow: 1px 3px 1px darken( $color-alt,15 );
+        transition-property: color;
+        transition-duration: .3s;
+      }
     }
   }
-  input[type="checkbox"]:checked ~ ul {
-    z-index: 4;
-    position: fixed;
-    top: ( $paddingbase * 2 );
-    right: $paddingbase;
-    @include flexbox;
-    @include flex-direction(column);
-    @include justify-content(center);
-    @include flex-wrap(wrap);
-    @include align-items(center);
-    background-color: $color-alt;
-    margin: 0;
-    padding: 0;
-    @include transition(.4s);
-    @include translateY(0);
+  input[type="checkbox"] { display: none }
+  label {
+    width: 50px;
+    height: 50px;
+    position: fixed; right: 50px; top: 0;
+    z-index: 51;
+    padding: 20px;
+    font-size: 18px;
   }
-  > ul {
-    @include translateY(-800px);
-    display: none;
-  }
-  input[type="checkbox"] {
-    display: none;
-  }
-  input[type="checkbox"]:checked + label::after {
-    content:"X";
+  input[type="checkbox"]:checked ~ ul,
+  .checked {
+    transform:
+      translate( 0, 65px )
+      rotate( -10deg )
+      ;
+    transition-property: transform;
+    transition-duration: .3s;
   }
 }
 
-// Main Menu Overlay
-.nav-main__overlay {
-  a {
-    line-height: 1.3;
-    color: $white;
-    display: block;
-    &:hover {
-      background-color: $black;
-    }
-    padding-top: ( $paddingbase / 2 );
-    padding-left: ( $paddingbase / 2 );
-    padding-right: ( $paddingbase / 2 );
-    &:last-child {
-      padding-bottom: ( $paddingbase / 2 );
-    }
-  }
-  ul {
-    display: none; //solo el 1er nivel
-  }
-  .current-menu-item {
-    a {
-      display: none;
-    }
-  }
-}
 // Nav Secondary
 .nav-secondary {
   flex: 1;
