--- a/style.css
+++ b/style.css
@@ -936,7 +936,6 @@ article, aside, figure, footer, header, hgroup, nav, section {
   display: block;
   -webkit-touch-callout: none;
   -webkit-user-select: none;
-  -khtml-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
   user-select: none;
@@ -4048,100 +4047,59 @@ sub {
 Main navbar
 **********************/
 .nav-main {
-  position: relative;
-  -webkit-transition: all 0.4s;
-  transition: all 0.4s;
-  -webkit-box-flex: 1;
-  -webkit-flex: 1 100%;
-      -ms-flex: 1 100%;
-          flex: 1 100%; }
-  .nav-main label {
-    margin-bottom: 0; }
-  .nav-main label::after {
-    width: 2em;
+  position: relative; }
+  @media screen and (min-width: 900px) {
+    .nav-main {
+      display: none; } }
+  .nav-main ul {
     position: fixed;
-    top: 10px;
-    right: 20px;
-    display: block;
-    font-size: 22px;
-    font-size: 1.1rem;
-    line-height: 2.1;
-    content: "☰";
-    z-index: 250;
+    right: 0;
+    top: 0;
+    z-index: 50;
+    border-radius: 20px;
+    line-height: 1.7;
     text-align: center;
+    -webkit-transition-property: -webkit-transform;
+            transition-property: transform;
+    -webkit-transition-duration: .3s;
+            transition-duration: .3s;
+    -webkit-transform: translate(100%, 65px) rotate(0deg);
+        -ms-transform: translate(100%, 65px) rotate(0deg);
+            transform: translate(100%, 65px) rotate(0deg);
+    padding: 20px;
     background-color: #f0730b;
-    border-radius: 8px;
-    color: white; }
-    @media screen and (min-width: 900px) {
-      .nav-main label::after {
-        display: none; } }
-  .nav-main input[type="checkbox"]:checked ~ ul {
-    z-index: 4;
-    position: fixed;
-    top: 40px;
-    right: 20px;
-    display: -moz-flex;
-    /* OLD - Firefox 19 */
-    display: -ms-flexbox;
-    /* TWEENER - IE 10 */
-    display: -webkit-flex;
-    /* NEW - Chrome */
-    display: -webkit-box;
-    /* OLD - iOS 6-, Safari 3.1-6 */
-    display: flex;
-    /* NEW, Spec - Opera 12.1, Firefox 20+ */
-    -webkit-box-direction: normal;
-    -webkit-box-orient: vertical;
-    -webkit-flex-direction: column;
-    -moz-flex-direction: column;
-    -ms-flex-direction: column;
-    flex-direction: column;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
-    -webkit-justify-content: center;
-    -moz-justify-content: center;
-    justify-content: center;
-    -webkit-flex-wrap: wrap;
-    -ms-flex-wrap: wrap;
-    flex-wrap: wrap;
-    -webkit-box-align: center;
-    -ms-flex-align: center;
-    -webkit-align-items: center;
-    -moz-align-items: center;
-    align-items: center;
-    background-color: #f0730b;
-    margin: 0;
-    padding: 0;
-    -webkit-transition: all 0.4s;
-    transition: all 0.4s;
-    -ms-transform: translateY(0);
-    -webkit-transform: translateY(0);
-            transform: translateY(0); }
-  .nav-main > ul {
-    -ms-transform: translateY(-800px);
-    -webkit-transform: translateY(-800px);
-            transform: translateY(-800px);
-    display: none; }
+    box-shadow: 2px 2px 0 rgba(0, 0, 0, 0.5); }
+    .nav-main ul li {
+      display: block; }
+    .nav-main ul a {
+      padding: 5px;
+      font-size: 150%; }
+      .nav-main ul a:hover {
+        color: #317549;
+        -webkit-transition-property: color;
+                transition-property: color;
+        -webkit-transition-duration: .3s;
+                transition-duration: .3s; }
   .nav-main input[type="checkbox"] {
     display: none; }
-  .nav-main input[type="checkbox"]:checked + label::after {
-    content: "X"; }
-
-.nav-main__overlay a {
-  line-height: 1.3;
-  color: white;
-  display: block;
-  padding-top: 10px;
-  padding-left: 10px;
-  padding-right: 10px; }
-  .nav-main__overlay a:hover {
-    background-color: black; }
-  .nav-main__overlay a:last-child {
-    padding-bottom: 10px; }
-.nav-main__overlay ul {
-  display: none; }
-.nav-main__overlay .current-menu-item a {
-  display: none; }
+  .nav-main label {
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    right: 50px;
+    top: 0;
+    z-index: 51;
+    padding: 20px;
+    font-size: 18px; }
+  .nav-main input[type="checkbox"]:checked ~ ul,
+  .nav-main .checked {
+    -webkit-transform: translate(0, 65px) rotate(-10deg);
+        -ms-transform: translate(0, 65px) rotate(-10deg);
+            transform: translate(0, 65px) rotate(-10deg);
+    -webkit-transition-property: -webkit-transform;
+            transition-property: transform;
+    -webkit-transition-duration: .3s;
+            transition-duration: .3s; }
 
 .nav-secondary {
   -webkit-box-flex: 1;
